--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>assigment_no_1</title>
 </head>
 <body>
@@ -20,7 +20,7 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Gallary</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Contact us</a></li>
             </ul>
         </nav>
         <div class="clear">
@@ -29,7 +29,7 @@
     <div class="cards">
         <div class="card">
             <div class="card-img">
-                <img src="R (1).png" alt="photo">
+                <img src="./assets/R (1).png" alt="photo">
             </div>
             <div class="card-info">
                 <h3>Neymar jr</h3>
@@ -38,7 +38,7 @@
         </div>
         <div class="card">
             <div class="card-img">
-                <img src="R (1).png" alt="photo">
+                <img src="./assets/R (1).png" alt="photo">
             </div>
             <div class="card-info">
                 <h3>Neymar jr</h3>
@@ -47,7 +47,7 @@
         </div>
         <div class="card">
             <div class="card-img">
-                <img src="R (1).png" alt="photo">
+                <img src="./assets/R (1).png" alt="photo">
             </div>
             <div class="card-info">
                 <h3>Neymar jr</h3>
@@ -56,7 +56,7 @@
         </div>
         <div class="card">
             <div class="card-img">
-                <img src="R (1).png" alt="photo">
+                <img src="./assets/R (1).png" alt="photo">
             </div>
             <div class="card-info">
                 <h3>Neymar jr</h3>
@@ -65,7 +65,7 @@
         </div>
         <div class="card">
             <div class="card-img">
-                <img src="R (1).png" alt="photo">
+                <img src="./assets/R (1).png" alt="photo">
             </div>
             <div class="card-info">
                 <h3>Neymar jr</h3>
@@ -74,7 +74,7 @@
         </div>
         <div class="card">
             <div class="card-img">
-                <img src="R (1).png" alt="photo">
+                <img src="./assets/R (1).png" alt="photo">
             </div>
             <div class="card-info">
                 <h3>Neymar jr</h3>
@@ -83,7 +83,7 @@
         </div>
         <div class="card">
             <div class="card-img">
-                <img src="R (1).png" alt="photo">
+                <img src="./assets/R (1).png" alt="photo">
             </div>
             <div class="card-info">
                 <h3>Neymar jr</h3>
@@ -92,7 +92,7 @@
         </div>
         <div class="card">
             <div class="card-img">
-                <img src="R (1).png" alt="photo">
+                <img src="./assets/R (1).png" alt="photo">
             </div>
             <div class="card-info">
                 <h3>Neymar jr</h3>
